--- a/ddp-workspace/projects/ddp-pancan/src/styles/static-page.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/static-page.scss
@@ -15,16 +15,6 @@
     line-height: 34px;
 }
 
-.participate-step-label {
-    font-size: 1rem;
-    font-family: $primary-font-medium;
-    letter-spacing: -0.07px;
-    line-height: 24px;
-    margin-right: 0.5rem;
-}
-
-.participate-step-time {
-    font-size: 1rem;
-    letter-spacing: -0.07px;
-    line-height: 24px;
+.static-page-content-section {
+    margin: 0 0 4rem 0;
 }
