Add real logos for partners

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -100,6 +100,7 @@ section {
             gap: 5rem;
             flex-wrap: wrap;
             justify-content: space-between;
+            align-items: center;
         }
     }
 
@@ -155,6 +156,12 @@ section {
         &.partners {
             .logos {
                 flex-direction: column;
+                max-width: 100%;
+
+                img {
+                    max-width: 100%;
+                    height: auto;
+                }
             }
         }
     }
