--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.html
@@ -16,7 +16,7 @@
 <div class="container">
     <a mat-stroked-button
        [routerLink]="'/' + AppRoutes.Participation"
-       class="btn learn-more-btn center small-letter-spacing btn-common btn-outline">
+       class="btn learn-more-btn center small-letter-spacing button button_small button_secondary">
         {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
     </a>
 </div>
