--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
     <button mat-stroked-button
-            class="btn join-btn small-letter-spacing btn-common btn-outline"
+            class="btn join-btn small-letter-spacing button button_small button_secondary"
             (click)="openJoinMailingList()">
         {{(btnText || 'App.HomePage.StayInformedSection.JoinMailingListButton') | translate}}
     </button>
