--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
@@ -7,7 +7,7 @@
     <p class="text static-page-paragraph-text" translate>App.HomePage.CountMeInSection.Text</p>
     <a mat-raised-button
        [routerLink]="'/' + AppRoutes.CountMeIn"
-       class="btn join-cmi-btn btn-common"
+       class="btn join-cmi-btn  button button_small"
        color="primary">
         {{'App.HomePage.JoinCountMeInButton' | translate}}
     </a>
