--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -5,6 +5,8 @@
 @import 'styles/buttons';
 @import 'styles/redirect';
 @import 'styles/dashboard';
+@import 'styles/mixins';
+@import 'styles/static-page';
 
 html,
 body {
