--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -12,6 +12,8 @@ $secondary-font: Source Serif Pro;
 // Other
 $header-height: 6rem;
 $footer-height: 14.94rem;
+$splash-page-footer-height: 18.19rem;
+$landing-page-container-width: 1200px;
 
 // Colors
 $text-color: #000000;
@@ -22,4 +24,6 @@ $section-grey-background-color: #F6F7FA;
 $warn-color: #f44336;
 $activity-step-default: #CBCAD0;
 $activity-step-inactive: #5a42d0;
+$footer-background: #131314;
+$footer-divider-color: #444444;
 $checkbox-color: #ACABB0;
