Create new splash LMS page

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/splash-page-footer/splash-page-footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/splash-page-footer/splash-page-footer.component.html
@@ -6,7 +6,7 @@
             <mat-icon>arrow_drop_up</mat-icon>
             {{'App.Footer.BackToTopButton' | translate}}
         </button>
-        <p class="text" [innerHTML]="'App.ColorectalPage.Footer.Text' | translate"></p>
+        <p class="text" [innerHTML]="text | translate"></p>
     </div>
 
     <div class="contacts">
