--- a/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.scss
@@ -1,8 +1,33 @@
+@import '../../../styles/breakpoints';
+
 .activity {
   &__title {
     margin-bottom: 0.75em;
 
     font-size: 4rem;
     text-align: center;
+
+    @include media-sm {
+      font-size: 3.2rem;
+    }
   }
+}
+
+.section--spinner {
+  display: flex;
+  justify-content: center;
+
+  margin-top: 2.4rem;
+}
+
+.section--buttons {
+  margin: 1em 0;
+}
+
+.section--error {
+  margin: 1em 0;
+}
+
+.btn {
+  padding: 1.2rem 4.2rem;
 }
