--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/join/join.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/join/join.component.html
@@ -3,6 +3,7 @@
     <app-activity
       [activityGuid]="prequalInstanceGuid"
       [studyGuid]="studyGuid"
+      (submit)="onSubmit($event)"
     ></app-activity>
   </div>
 </div>
