--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/join/join.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/join/join.component.html
@@ -1,6 +1,7 @@
 <div class="join">
   <div class="join__container">
     <app-activity
+      [isPrequal]="true"
       [activityGuid]="prequalInstanceGuid"
       [studyGuid]="studyGuid"
       (submit)="onSubmit($event)"
