--- a/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/activity/activity.component.html
@@ -104,54 +104,81 @@
       <span class="last-updated">{{ model.lastUpdatedText }}</span>
     </section>
 
+    <section *ngIf="isPrequal" class="section section--captcha">
+      <re-captcha
+        [siteKey]="captchaSiteKey"
+        (resolved)="onCaptchaResolve($event)"
+      ></re-captcha>
+    </section>
+
     <section class="section section--buttons">
       <ng-container [ngSwitch]="model.activityCode">
-        <ng-container *ngIf="isStepped">
-          <button
-            *ngIf="!isFirstStep"
-            class="button button--yellow pull-left"
-            [disabled]="(isPageBusy | async) || dataEntryDisabled"
-            [innerHTML]="'SDK.PreviousButton' | translate"
-            (click)="decrementStep()"
-          ></button>
-
-          <button
-            *ngIf="!isLastStep"
-            class="button button--yellow pull-right"
-            [disabled]="(isPageBusy | async) || dataEntryDisabled"
-            [innerHTML]="
-              (isPageBusy | async)
-                ? ('SDK.SavingButton' | translate)
-                : ('SDK.NextButton' | translate)
-            "
-            (click)="incrementStep()"
-          ></button>
-        </ng-container>
-
-        <ng-container *ngIf="!isStepped || isLastStep">
+        <ng-container *ngSwitchCase="ActivityCode.Prequal">
           <button
             #submitButton
-            *ngIf="!isReadonly() && !isAgree()"
+            type="button"
             class="btn btn--scarlet"
-            [disabled]="(isPageBusy | async) || dataEntryDisabled"
+            [disabled]="
+              (isPageBusy | async) || dataEntryDisabled || !isCaptchaResolved
+            "
             [innerHTML]="
               (isPageBusy | async)
                 ? ('SDK.SavingButton' | translate)
-                : ((isVerticalProgress
-                    ? 'SDK.FinishButton'
-                    : 'SDK.SubmitButton'
-                  ) | translate)
+                : ('SDK.SubmitButton' | translate)
             "
             (click)="flush()"
             (mouseenter)="mouseEnterOnSubmit()"
           ></button>
+        </ng-container>
 
-          <button
-            *ngIf="isReadonly()"
-            class="btn btn--white"
-            [innerHTML]="'SDK.CloseButton' | translate"
-            (click)="close()"
-          ></button>
+        <ng-container *ngSwitchDefault>
+          <ng-container *ngIf="isStepped">
+            <button
+              *ngIf="!isFirstStep"
+              class="btn btn--scarlet pull-left"
+              [disabled]="(isPageBusy | async) || dataEntryDisabled"
+              [innerHTML]="'SDK.PreviousButton' | translate"
+              (click)="decrementStep()"
+            ></button>
+
+            <button
+              *ngIf="!isLastStep"
+              class="btn btn--scarlet pull-right"
+              [disabled]="(isPageBusy | async) || dataEntryDisabled"
+              [innerHTML]="
+                (isPageBusy | async)
+                  ? ('SDK.SavingButton' | translate)
+                  : ('SDK.NextButton' | translate)
+              "
+              (click)="incrementStep()"
+            ></button>
+          </ng-container>
+
+          <ng-container *ngIf="!isStepped || isLastStep">
+            <button
+              #submitButton
+              *ngIf="!isReadonly() && !isAgree()"
+              class="btn btn--scarlet"
+              [disabled]="(isPageBusy | async) || dataEntryDisabled"
+              [innerHTML]="
+                (isPageBusy | async)
+                  ? ('SDK.SavingButton' | translate)
+                  : ((isVerticalProgress
+                      ? 'SDK.FinishButton'
+                      : 'SDK.SubmitButton'
+                    ) | translate)
+              "
+              (click)="flush()"
+              (mouseenter)="mouseEnterOnSubmit()"
+            ></button>
+
+            <button
+              *ngIf="isReadonly()"
+              class="btn btn--white"
+              [innerHTML]="'SDK.CloseButton' | translate"
+              (click)="close()"
+            ></button>
+          </ng-container>
         </ng-container>
       </ng-container>
     </section>
