--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -59,25 +59,30 @@
     <section class="partners">
         <h2 class="title static-page-title" translate>App.ColorectalPage.Partners.Title</h2>
         <div class="logos">
-            <a href="https://" target="_blank">
-                <img lazy-resource src="assets/images/CCC_logo.png"
-                     [alt]="'App.ColorectalPage.Partners.Alts.CCCanada' | translate"
-                     width="503" height="95">
-            </a>
-            <a href="https://" target="_blank">
+            <a href="https://ccran.org/" target="_blank">
                 <img lazy-resource src="assets/images/CCRAN_logo.png"
                      [alt]="'App.ColorectalPage.Partners.Alts.CCResource' | translate"
                      width="309" height="188">
             </a>
-            <a href="https://" target="_blank">
+            <a href="https://www.theraymondfoundation.org/" target="_blank">
+                <img lazy-resource src="assets/images/Raymond_logo.png"
+                     [alt]="'App.ColorectalPage.Partners.Alts.Raymond' | translate"
+                     width="460" height="104">
+            </a>
+            <a href="https://www.gicancersalliance.org/" target="_blank">
                 <img lazy-resource src="assets/images/GICA_logo.png"
                      [alt]="'App.ColorectalPage.Partners.Alts.GICAlliance' | translate"
                      width="320" height="214">
             </a>
-            <a href="https://" target="_blank">
-                <img lazy-resource src="assets/images/Raymond_logo.png"
-                     [alt]="'App.ColorectalPage.Partners.Alts.Raymond' | translate"
-                     width="460" height="104">
+            <a href="https://www.colorectalcancercanada.com/" target="_blank">
+                <img lazy-resource src="assets/images/CCC_logo.png"
+                     [alt]="'App.ColorectalPage.Partners.Alts.CCCanada' | translate"
+                     width="503" height="95">
+            </a>
+            <a href="https://fightcolorectalcancer.org/" target="_blank">
+                <img lazy-resource src="assets/images/FightCC_logo.png"
+                     [alt]="'App.ColorectalPage.Partners.Alts.FightCC' | translate"
+                     width="333" height="125">
             </a>
         </div>
         <p class="text static-page-paragraph-text" [innerHTML]="'App.ColorectalPage.Partners.Text' | translate"></p>
