Unify (use common) translations for `stay-informed` section on Welcome/Colorectal pages

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -89,11 +89,7 @@
     </section>
 
     <section class="stay-informed">
-        <app-stay-informed-section
-            title="App.ColorectalPage.StayInformed.Title"
-            btnText="App.ColorectalPage.StayInformed.Button"
-            [isColorectal]="true">
-        </app-stay-informed-section>
+        <app-stay-informed-section [isColorectal]="true"></app-stay-informed-section>
     </section>
 
     <section class="join-cmi">
