Apply custom translations for `join-cmi` section
  (use different translations on Welcome/Colorectal pages)

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -93,7 +93,7 @@
     </section>
 
     <section class="join-cmi">
-        <app-join-cmi-section></app-join-cmi-section>
+        <app-join-cmi-section title="App.ColorectalPage.CountMeInSection.Title"></app-join-cmi-section>
     </section>
 </main>
 <app-splash-page-footer [phone]="phone" [email]="email"></app-splash-page-footer>
