--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
@@ -3,12 +3,12 @@
          lazy-resource
          src="assets/images/hands.png"
          [alt]="'App.HomePage.CountMeInSection.ImageAlt' | translate">
-    <h2 class="title static-page-title" translate>App.HomePage.CountMeInSection.Title</h2>
-    <p class="text static-page-paragraph-text" translate>App.HomePage.CountMeInSection.Text</p>
+    <h2 class="title static-page-title">{{title | translate}}}</h2>
+    <p class="text static-page-paragraph-text">{{text | translate}}</p>
     <a mat-raised-button
        [routerLink]="'/' + AppRoutes.CountMeIn"
        class="btn join-cmi-btn  button button_small"
        color="primary">
-        {{'App.HomePage.JoinCountMeInButton' | translate}}
+        {{btnText | translate}}
     </a>
 </div>
