--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/join-cmi-section/join-cmi-section.component.html
@@ -3,7 +3,7 @@
          lazy-resource
          src="assets/images/hands.png"
          [alt]="'App.HomePage.CountMeInSection.ImageAlt' | translate">
-    <h2 class="title static-page-title">{{title | translate}}}</h2>
+    <h2 class="title static-page-title">{{title | translate}}</h2>
     <p class="text static-page-paragraph-text">{{text | translate}}</p>
     <a mat-raised-button
        [routerLink]="'/' + AppRoutes.CountMeIn"
