--- a/ddp-workspace/projects/ddp-pancan/src/app/components/auth/auth.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/auth/auth.component.scss
@@ -9,10 +9,17 @@
     align-items: center;
 }
 
+@media screen and (max-width: $tablet-breakpoint) {
+    :host {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+    }
+}
+
 @media screen and (max-width: $mobile-breakpoint) {
     :host {
         flex-direction: column;
-        gap: 1rem;
     }
 
     .join-button {
