DDP-6728 update static pages title font

--- a/ddp-workspace/projects/ddp-pancan/src/styles/static-page.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/static-page.scss
@@ -1,7 +1,7 @@
 @import '../styles/variables';
 
 .static-page-title {
-    font-family: $secondary-font;
+    font-family: $primary-font-light;
     font-size: 2.5rem;
     font-weight: 600;
     letter-spacing: -0.08px;
