--- a/ddp-workspace/projects/ddp-pancan/src/app/components/navigation/navigation.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/navigation/navigation.component.scss
@@ -11,7 +11,7 @@
 }
 
 .navigation__link {
-    font-family: $primary-font-medium;
     letter-spacing: -0.015rem;
     color: inherit;
+    font-size: 1.25rem;
 }
