--- a/ddp-workspace/projects/ddp-pancan/src/styles/buttons.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/buttons.scss
@@ -4,7 +4,6 @@
 .button,
 .SimpleButton {
     padding: 0.625rem 2rem;
-    font-family: $primary-font-medium;
     border-radius: 4px;
     border: none;
     box-sizing: border-box;
@@ -22,13 +21,13 @@
     text-decoration: none;
 }
 
-.button_small,
-.SimpleButton {
+.button_small {
     font-size: 1rem;
     line-height: 1.25rem;
 }
 
-.button_medium {
+.button_medium,
+.SimpleButton {
     font-size: 1.25rem;
     line-height: 2rem;
 }
@@ -99,11 +98,11 @@
 }
 
 .btn-auth {
-    padding: 0.65rem 1.5rem !important;
+    padding: 0.7rem 1.75rem !important;
     line-height: 20px !important;
 
     &.dashboard-button {
-        padding: 0.65rem !important;
+        padding: 0.7rem !important;
     }
 }
 
