--- a/ddp-workspace/projects/ddp-pancan/src/app/components/scientific-research/scientific-research.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/scientific-research/scientific-research.component.html
@@ -1,5 +1,4 @@
-<app-anchors-page
+<app-page-with-ovals
     source="App.ScientificResearchPage"
-    [route]="route"
     [linksMap]="linksMap">
-</app-anchors-page>
+</app-page-with-ovals>
