--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
@@ -12,22 +12,31 @@
         &.steps {
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
         }
     }
 
     .step {
-        margin: 0 1.5rem 0 0;
+        margin: 0 1.5rem 1.5rem 0;
         font-size: 1rem;
+        width: 295px;
 
         &:last-child {
             margin-right: 0;
         }
 
+        &__image-container {
+            height: 240px;
+            background-color: white;
+            border-radius: 10px 10px 0 0;
+            display: flex;
+            align-items: center;
+        }
+
         &__image {
             display: block;
-            margin: 0 auto 1.63rem;
+            margin: 0 auto;
             position: relative;
-            left: -10%;
         }
 
         &__title {
@@ -43,6 +52,31 @@
 
         &__description {
             max-width: 240px;
+            margin-top: 1rem;
+            line-height: 1.75rem;
+        }
+
+        &__info {
+            padding: 19px 19px 36px 26px;
+            position: relative;
+            height: 219px;
+            box-sizing: border-box;
+        }
+
+        &__info-background {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background: white;
+            opacity: 0.8;
+            border-radius: 0 0 10px 10px;
+        }
+
+        &__info-text {
+            position: relative;
+            z-index: 1;
         }
     }
 }
@@ -55,6 +89,10 @@
 
 .learn-more-btn {
     margin-top: 2.81rem;
+}
+
+.container__button {
+    text-align: center;
 }
 
 @media screen and (max-width: $tablet-breakpoint) {
