--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.scss
@@ -3,27 +3,15 @@
 .container {
     max-width: 900px;
     margin: 0 auto;
-    text-align: left;
 }
 
 .social-media {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2.5rem;
-
-    .text {
-        text-align: left;
-        margin: 0 2.5rem 0 0;
-        flex: 2 1 auto;
-        max-width: unset;
-    }
-
     &__links {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        flex: 0 1 150px;
+        width: 150px;
+        margin: 0 auto 0.8rem;
     }
 
     &__link {
@@ -35,7 +23,10 @@
 .title {
     margin: 0;
     padding-bottom: 1.13rem;
-    text-align: left;
+}
+
+.join-btn {
+    margin-top: 2.5rem;
 }
 
 @media screen and (max-width: $tablet-breakpoint) {
